# toulouse_rover

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md  arduino_ros_batter_check.ino  notes_ir  run_clang_tidy.sh  technical_notes_README.md  test_ir_encoder.cpp  test_motors.cpp
arduino_serial_motor_driver/: arduino_serial_motor_driver.ino
cad/: Shell v2.f3d  Turtle Shell_Base v3.f3d  turtle_head v5.f3d
debugging_details/: .~lock.unit_walk_through.odt#  unit_walk_through.odt
src/toulouse_rover/: CMakeLists.txt  package.xml
src/toulouse_rover/include/toulouse_rover/: odom_calc.h  odom_calculator.h  util.h  wheel_speed_calculator.h  wheel_speed_controller.h  wheels.h
src/toulouse_rover/launch/: controller.launch  monitor.launch  pid_monitor.launch  toulouse.launch  toulouse_autonomy.launch  toulouse_sim.launch
src/toulouse_rover/maps/: map_mz_room.yaml
src/toulouse_rover/msg/: WheelEncoderCounts.msg  WheelPwmSpeeds.msg  WheelSpeeds.msg
src/toulouse_rover/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rosconsole.config  wheel_speed_controller_params.yaml
src/toulouse_rover/rviz/: autonomous_display.rviz
src/toulouse_rover/scripts/: serial_motor_driver.py
src/toulouse_rover/src/: odom_calc.cpp  odom_calculator.cpp  odom_calculator_node.cpp  robot_control_node.cpp  test_ir_ros.cpp  test_motors_ros.cpp  test_wiringpi_ros.cpp  util.cpp  wheel_speed_calculator.cpp  wheel_speed_calculator_node.cpp  wheel_speed_controller.cpp  wheel_speed_controller_node.cpp  wheels.cpp  wheels.h
src/toulouse_rover/src/hardware_testing_scripts/: test_motors_ros.cpp
src/toulouse_rover/tests/test_odom_calculator_node/: calculator.test  test.cpp
src/toulouse_rover/tests/test_wheel_speed_calculator/: calculator.test  test.cpp
src/toulouse_rover/tests/test_wheel_speed_controller/: controller.test  test.cpp
src/toulouse_rover/tests/test_wheel_speed_controller_pid/: controller.test  test.cpp
src/toulouse_rover/urdf/: toulouse.urdf  toulouse.urdf.xacro
